# webval

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
docs/: CICD.md  DESIGN.md  TEST_STRATEGY.md
scripts/: generate_sample_run.py
src/webval/: __init__.py  __main__.py  cli.py  pipeline.py
src/webval/config/: __init__.py  settings.py
src/webval/crawler/: __init__.py  browser.py  discovery.py  snapshot.py
src/webval/evidence/: __init__.py  store.py
src/webval/models/: __init__.py  evidence.py  page.py  pdf.py  requirement.py  result.py
src/webval/pdf_parser/: __init__.py  extractor.py  ocr.py
src/webval/reports/: __init__.py  excel.py  html.py  json_out.py
src/webval/reports/templates/: report.html.j2
src/webval/requirement_engine/: __init__.py  annotations.py  engine.py  rules.py
src/webval/utils/: __init__.py  logging.py  proxy.py  retry.py  text.py
src/webval/validators/: __init__.py  accessibility.py  anchors.py  base.py  content.py  downloads.py  images.py  links.py  metadata.py  performance.py  registry.py  responsive.py  ui_behavior.py  video.py  visual.py
tests/: conftest.py
tests/integration/: test_crawl_local.py
tests/unit/: test_annotations.py  test_evidence_store.py  test_models.py  test_pdf_extractor.py  test_proxy.py  test_reports.py  test_requirement_engine.py  test_settings.py  test_snapshot_parse.py  test_text.py  test_visual.py
