[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webval"
version = "1.0.1"
description = "Requirement-traceability validation framework for regulated website verification (spec PDF -> requirements -> automated verification -> auditable evidence -> reports)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Validation Engineering" }]
dependencies = [
    "playwright>=1.47",
    "pdfplumber>=0.11",
    "PyMuPDF>=1.24",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "Jinja2>=3.1",
    "typer>=0.12",
    "rich>=13.7",
    "Pillow>=10.4",
    "PyYAML>=6.0",
    "pytesseract>=0.3.10",
    "rapidocr-onnxruntime>=1.2",  # 1.2.3 is the newest release that supports Python 3.13
]

[project.optional-dependencies]
visual = ["imagehash>=4.3", "scikit-image>=0.24"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-PyYAML",
    "types-openpyxl",
]

[project.scripts]
webval = "webval.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"webval.reports" = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a live browser and/or network (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Intentional unicode: punctuation-normalization map / fixtures exercising it
"src/webval/utils/text.py" = ["RUF001"]
"src/webval/requirement_engine/annotations.py" = ["RUF001"]
"tests/unit/test_text.py" = ["RUF001"]
# Data literals in the demo spec table read better unwrapped
"scripts/generate_sample_run.py" = ["E501"]
"tests/conftest.py" = ["E501"]
# typer's Option/Argument-in-default idiom
"src/webval/cli.py" = ["B008"]

[[tool.mypy.overrides]]
module = ["fitz", "fitz.*", "pytesseract", "pdfplumber", "pdfplumber.*", "rapidocr_onnxruntime", "onnxruntime"]
ignore_missing_imports = true
